Post-jam feature update

--- a/appmanifest.json
+++ b/appmanifest.json
@@ -1,6 +1,6 @@
 {
-	"name": "AzureLuxChainReaction",
-	"short_name": "AzureLuxChainReaction",
+	"name": "Chain Reaction",
+	"short_name": "Chain Reaction",
 	"description": "",
 	"start_url": "index.html",
 	"display": "fullscreen",
